tests/baselines/reference/requiredInitializedParameter1.errors.txt
tests/cases/compiler/requiredInitializedParameter1.ts(11,1): error TS2346: Supplied parameters do not match any signature of call target.
tests/cases/compiler/requiredInitializedParameter1.ts(16,1): error TS2346: Supplied parameters do not match any signature of call target.


==== tests/cases/compiler/requiredInitializedParameter1.ts (2 errors) ====
    function f1(a, b = 0, c) { }
    function f2(a, b = 0, c = 0) { }
    function f3(a, b = 0, c?) { }
    function f4(a, b = 0, ...c) { }
    
    f1(0, 1, 2);
    f2(0, 1, 2);
    f3(0, 1, 2);
    f4(0, 1, 2);
    
    f1(0, 1);
    ~~~~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.
    f2(0, 1);
    f3(0, 1);
    f4(0, 1);
    
    f1(0);
    ~~~~~
!!! error TS2346: Supplied parameters do not match any signature of call target.
    f2(0);
    f3(0);
    f4(0);